# scalpel

./: .gitignore  Cargo.toml  README.md  default.nix  org.org  pysolve.py  pysolve2.py  result  shell.nix  table.md
examples/01/: compile_commands.json  test.cc
examples/02/: compile_commands.json  test.cc
examples/03/: test.cc
examples/04/: compile_commands.json  test.cc
examples/05/: compile_commands.json  test.cc
examples/06/: Makefile  compile_commands.json  test.cc
examples/07/: compile_commands.json  test.cc
src/: constraints.rs  frames.rs  main.rs  types.rs  util.rs  walker.rs
