[package]
name = "scalpel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "2.0.0", features = ["clang_4_0"] }
clap = { version = "4.0", features = ["derive"] }
lstsq = "0.5.0"
nalgebra = "0.32.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
